# openpoker

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Plan de Estudios.md  docker-compose.yml  llm.md  next_steps.MD  start.sh
ai/: Dockerfile  requirements.txt
api/: Dockerfile  pyproject.toml
api/app/: config_renderer.py  main.py  models.py  requirements.txt  solver.py  trainer_spots.py
api/app/core/: config.py
api/app/db/: base.py  models.py
api/app/routers/: ai.py  hands.py  ranges.py  trainer.py
api/tests/: hands.py
finetune/: README.md  export_data.py  prepare_dataset.py  requirements.txt
frontend/: Dockerfile  nginx.conf
hand_samples/: HH20251105 Caph #2 - €0.05-€0.10 - EUR No Limit Hold'em.txt  HH20251105 Caph - 0,05 €-0,10 € - EUR Hold'em Sin límite.txt  HH20251105 Caph - €0.05-€0.10 - EUR No Limit Hold'em.txt  HH20251108 Caph - €0.05-€0.10 - EUR No Limit Hold'em.txt  HH20251109 Caph - €0.05-€0.10 - EUR No Limit Hold'em.txt  HH20251110 Caph - €0.05-€0.10 - EUR No Limit Hold'em.txt  HH20251112 Caph #3 - 0,05 €-0,10 € - EUR Hold'em Sin límite.txt  HH20251114 Arneb - €0.01-€0.02 - EUR No Limit Hold'em.txt  HH20251114 Caph #2 - €0.05-€0.10 - EUR No Limit Hold'em.txt  HH20251114 Caph - €0.05-€0.10 - EUR No Limit Hold'em.txt  HH20251117 Caph - €0.05-€0.10 - EUR No Limit Hold'em.txt  HH20251119 Caph #2 - €0.05-€0.10 - EUR No Limit Hold'em.txt  HH20251119 Caph - €0.05-€0.10 - EUR No Limit Hold'em.txt  HH20251123 Caph - €0.05-€0.10 - EUR No Limit Hold'em.txt  HH20251124 Caph #2 - €0.05-€0.10 - EUR No Limit Hold'em.txt  (+36 more)
texassolver-web/: .env.example  (+2 more)
(+296 files in other folders)
