[project]
name = "openpoker-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Pablo"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (==0.115.0)",
    "uvicorn[standard] (==0.30.6)",
    "pydantic (==2.9.2)",
    "pydantic[email] (==2.9.2)",
    "pydantic-settings (==2.6.1)",
    "aiofiles (==24.1.0)",
    "python-multipart (==0.0.12)",
    "sqlalchemy (==2.0.36)",
    "asyncpg (==0.29.0)",
    "alembic (==1.14.0)",
    "python-jose[cryptography] (==3.3.0)",
    "bcrypt (==4.2.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
